<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/back_dark_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="530dp"
        android:layout_height="298dp"
        android:src="@drawable/background_img"
        android:foreground="@drawable/share_background_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:textSize="9pt"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginStart="18dp"
        android:background="@color/back_dark_gray_null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_"
        android:textSize="8pt"
        android:textColor="@color/white"
        android:layout_marginTop="160dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_title_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_movie"
        android:textSize="20pt"
        android:textColor="@color/white"
        android:layout_marginTop="4dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_age"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_genre_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/genre_movie"
        android:textSize="8pt"
        android:textColor="@color/text_red"
        android:layout_marginTop="4dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_movie"
        app:layout_constraintStart_toStartOf="parent"/>


    <ImageView
        android:id="@+id/star_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_gray"
        android:layout_marginTop="8dp"
        android:layout_marginStart="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre_movie" />
    <ImageView
        android:id="@+id/star_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_gray"
        android:layout_marginTop="8dp"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@id/star_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre_movie" />
    <ImageView
        android:id="@+id/star_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_gray"
        android:layout_marginTop="8dp"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@id/star_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre_movie" />
    <ImageView
        android:id="@+id/star_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_gray"
        android:layout_marginTop="8dp"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@id/star_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre_movie" />
    <ImageView
        android:id="@+id/star_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_gray"
        android:layout_marginTop="8dp"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@id/star_4"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre_movie" />
    <TextView
        android:id="@+id/star_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon"
        android:textSize="9pt"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@id/star_5"
        app:layout_constraintTop_toTopOf="@+id/star_1"
        app:layout_constraintBottom_toBottomOf="@id/star_1"/>






    <TextView
        android:id="@+id/tv_stor_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storyline"
        android:textSize="8pt"
        android:textColor="@color/white"
        android:layout_marginTop="14dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toBottomOf="@id/star_1"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tv_stor_line_des"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/storyline_des"
        android:textSize="7pt"
        android:textColor="@color/text_gray"
        android:layout_marginTop="4dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintTop_toBottomOf="@id/tv_stor_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/tv_cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cast"
        android:textSize="8pt"
        android:textColor="@color/white"
        android:layout_marginTop="14dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toBottomOf="@id/tv_stor_line_des"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_actors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_cast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>